--- a/source/contact.html
+++ b/source/contact.html
@@ -1,38 +1,46 @@
 <h1 class="page-title">{{ page.name }}</h1>
-
-{% if contact.sent %}
-  <div class="message-banner message-banner--no-bg message-banner--centered">Thanks! Your message has been sent and we'll get back to you soon.</div>
-{% else %}
-  <form method="post" action="/contact" class="contact-form">
-    <div class="contact-form-block contact-name">
-      <label class="contact-label" for="name">Name</label>
-      <div class="input-holder">
-        {{ contact | contact_input: 'name' }}
+<div class="contact-container">
+  {% if errors != blank %}
+    <div class="message-banner message-banner--errors">
+      {% for error in errors %}
+        <div>{{ error }}</div>
+      {% endfor %}
+    </div>
+  {% endif %}
+  {% if contact.sent %}
+    <div class="message-banner message-banner--no-bg message-banner--centered">Thanks! Your message has been sent and we'll get back to you soon.</div>
+  {% else %}
+    <form method="post" action="/contact" class="contact-form">
+      <div class="contact-form-block contact-name">
+        <label class="contact-label" for="name">Name</label>
+        <div class="input-holder">
+          {{ contact | contact_input: 'name' }}
+        </div>
       </div>
-    </div>
-    <div class="contact-form-block contact-email">
-      <label class="contact-label" for="email">Email</label>
-      <div class="input-holder">
-        {{ contact | contact_input: 'email' }}
+      <div class="contact-form-block contact-email">
+        <label class="contact-label" for="email">Email</label>
+        <div class="input-holder">
+          {{ contact | contact_input: 'email' }}
+        </div>
       </div>
-    </div>
-    <div class="contact-form-block contact-subject">
-      <label class="contact-label" for="subject">Subject</label>
-      <div class="input-holder">
-        {{ contact | contact_input: 'subject' }}
+      <div class="contact-form-block contact-subject">
+        <label class="contact-label" for="subject">Subject</label>
+        <div class="input-holder">
+          {{ contact | contact_input: 'subject' }}
+        </div>
       </div>
-    </div>
-    <div class="contact-form-block contact-message">
-      <label class="contact-label" for="message">Message</label>
-      <div class="input-holder">
-        {{ contact | contact_input: 'message' }}
+      <div class="contact-form-block contact-message">
+        <label class="contact-label" for="message">Message</label>
+        <div class="input-holder">
+          {{ contact | contact_input: 'message' }}
+        </div>
       </div>
-    </div>
-    <div class="contact-form-block contact-send">
-      <button class="button" type="submit" name="submit">Send message</button>
-    </div>
-    <div class="contact-form-block recaptcha-note">
-      <p>{{ contact.recaptcha }}</p>
-    </div>
-  </form>
-{% endif %}
+      <div class="contact-form-block contact-send">
+        <button class="button" type="submit" name="submit">Send message</button>
+      </div>
+      <div class="contact-form-block recaptcha-note">
+        <p>{{ contact.recaptcha }}</p>
+      </div>
+    </form>
+  {% endif %}
+</div>
