--- a/source/home.html
+++ b/source/home.html
@@ -1,3 +1,11 @@
+{% if errors != blank %}
+  <div class="message-banner message-banner--errors">
+    {% for error in errors %}
+      <div>{{ error }}</div>
+    {% endfor %}
+  </div>
+{% endif %}
+
 {% if theme.welcome_image or theme.welcome_text != blank %}
   <div class="home-welcome stacked">
     {% if theme.welcome_image %}
@@ -24,19 +32,18 @@
 
 {% if theme.featured_items_type == 'Categories' %}
   {% if categories.active != blank and theme.featured_items > 0 %}
-    <div class="featured-categories">
-      <h1 class="visually-hidden">Featured categories</h1>
+    <div class="home-featured-categories">
+      <h1 class="page-title">{{ theme.featured_header }}</h1>
       {% for category in categories.active limit:theme.featured_items %}
         <div class="featured-category">
           <div class="featured-category-info">
-            <div class="featured-category-title">Featured</div>
             <div class="featured-category-name">{{ category.name }}</div>
             <a class="featured-category-button button" href="{{ category.url }}">Shop Now</a>
           </div>
           <div class="featured-category-products">
             {% for product in category.products limit:2 %}
               <div class="featured-category-product {% if forloop.length == 1 %}single-featured-product{% endif %}">
-                <img alt="Image of {{ product.name | escape }}" class="featured-category-product-image lazy" src="{{ product.image | product_image_url | constrain: 50 }}" data-src="{{ product.image | product_image_url | constrain: 400 }}" data-srcset="{{ product.image | product_image_url | constrain: 800 }} 2x, {{ product.image | product_image_url | constrain: 400 }} 1x">
+                <img alt="Image of {{ product.name | escape }}" class="featured-category-product-image lazyload" src="{{ product.image | product_image_url | constrain: 50 }}" data-src="{{ product.image | product_image_url | constrain: 400 }}" data-srcset="{{ product.image | product_image_url | constrain: 800 }} 2x, {{ product.image | product_image_url | constrain: 400 }} 1x">
               </div>
             {% endfor %}
           </div>
