--- a/source/home.html
+++ b/source/home.html
@@ -43,7 +43,21 @@
           <div class="featured-category-products">
             {% for product in category.products limit:2 %}
               <div class="featured-category-product {% if forloop.length == 1 %}single-featured-product{% endif %}">
-                <img alt="Image of {{ product.name | escape }}" class="featured-category-product-image lazyload" src="{{ product.image | product_image_url | constrain: 50 }}" data-src="{{ product.image | product_image_url | constrain: 400 }}" data-srcset="{{ product.image | product_image_url | constrain: 800 }} 2x, {{ product.image | product_image_url | constrain: 400 }} 1x">
+                <img
+                  alt="{{ product.name | escape }}"
+                  class="blur-up featured-category-product-image lazyload"
+                  src="{{ product.image | product_image_url | constrain: 20 }}"
+                  data-srcset="
+                    {{ product.image | product_image_url | constrain: 240 }} 240w,
+                    {{ product.image | product_image_url | constrain: 320 }} 320w,
+                    {{ product.image | product_image_url | constrain: 400 }} 400w,
+                    {{ product.image | product_image_url | constrain: 540 }} 540w,
+                    {{ product.image | product_image_url | constrain: 600 }} 600w,
+                    {{ product.image | product_image_url | constrain: 800 }} 800w,
+                    {{ product.image | product_image_url | constrain: 960 }} 960w
+                  "
+                  data-sizes="auto"
+                >
               </div>
             {% endfor %}
           </div>
@@ -51,7 +65,7 @@
         </div>
       {% endfor %}
     </div>
-    <a class="button centered-button" href="/products">View All Products</a>
+    {% if theme.all_products_button_text != blank %}<a class="button centered-button" href="/products">{{ theme.all_products_button_text }}</a>{% endif %}
   {% endif %}
 
 {% else %}
@@ -80,7 +94,9 @@
                     {% assign product_status = 'Coming soon' %}
                 {% endcase %}
                 <div class="product-list-thumb {{ product.css_class }}">
-                  <a class="product-list-link{% if product.images[1] != blank and theme.secondary_image_on_hover == true %} product-list-link--show-secondary{% endif %}" href="{{ product.url }}" title="View {{ product.name | escape }}">
+                  <a
+                    class="product-list-link{% if product.images[1] != blank and theme.secondary_image_on_hover == true %} product-list-link--show-secondary{% endif %}"
+                    href="{{ product.url }}" title="View {{ product.name | escape }}">
                     <div class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}">
                       <img
                         alt=""
@@ -137,7 +153,7 @@
             </div>
           </div>
           {% if paginate.pages > 1 %}
-            {% if theme.all_products_button_text != blank %}<a class="button button--centered button--secondary all-products-button" href="/products">{{ theme.all_products_button_text }}</a>{% endif %}
+            {% if theme.all_products_button_text != blank %}<a class="button centered-button" href="/products">{{ theme.all_products_button_text }}</a>{% endif %}
           {% endif %}
         {% else %}
           <div class="message-banner message-banner--centered message-banner--no-bg">No products found.</div>
