--- a/source/layout.html
+++ b/source/layout.html
@@ -298,11 +298,11 @@
             <ul class="navigation-modal__list">
               {% if categories.active != blank %}
                 <li class="navigation-modal__categories">
-                  <button class="navigation-modal__categories-toggle" aria-label="Open category navigation" aria-controls="category-list" aria-expanded="false">
+                  <button class="navigation-modal__categories-toggle" aria-label="Open category navigation" aria-controls="modal-category-list" aria-expanded="false">
                     <div>Shop</div>
                     <svg aria-hidden="true" fill="currentColor" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6"><path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/></svg>
                   </button>
-                  <div class="category-list" id="category-list" aria-hidden="true">
+                  <div class="category-list" id="modal-category-list" aria-hidden="true">
                     {% if categories.active != blank %}
                       <ul class="dropdown-list categories-list">
                         <li><a href="/products">All products</a></li>
