--- a/source/maintenance.html
+++ b/source/maintenance.html
@@ -10,7 +10,7 @@
   <body id="{{ page.permalink }}">
     <div class="message-container">
 
-      <div class="store-name">{{ store.name }}</div>
+      <h1 class="store-name">{{ store.name }}</h1>
 
       {% if theme.maintenance_message != blank %}<div class="maintenance-message">{{ theme.maintenance_message }}</div>{% endif %}
 
