--- a/source/layout.html
+++ b/source/layout.html
@@ -6,31 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ theme | theme_css_url }}" media="screen" rel="stylesheet" type="text/css">
     {{ head_content }}
+    <style>.preloader * { opacity: 0; }.transition-preloader * { transition: none !important }</style>
   </head>
-  <body id="{{ page.permalink }}" class="{{ page.category }}">
+  <body id="{{ page.permalink }}" class="{{ page.category }} {% if page.permalink == 'home' and theme.welcome_text != blank %} has-tagline{% endif %} preloader transition-preloader">
     <a class="skip-link" href="#main">Skip to main content</a>
     {% if theme.announcement_message_text != blank %}
-      <aside class="flash-message">
-        <div class="flash-message-text">{{ theme.announcement_message_text }}</div>
-        <button class="flash-message-close" title="Close announcement message">
-          <svg aria-hidden="true" height="16" width="16" class="close-icon" viewBox="0 0 17 17">
-            <path d="M17 1.4L15.6 0 8.5 7.1 1.4 0 0 1.4l7.1 7.1L0 15.6 1.4 17l7.1-7.1 7.1 7.1 1.4-1.4-7.1-7.1z"></path>
+      <div aria-label="Announcement message" class="announcement-message">
+        <div class="announcement-message__text">{{ theme.announcement_message_text }}</div>
+        <button title="Close announcement message" class="announcement-message__close-button">
+          <svg aria-hidden="true" fill="currentColor" class="announcement-message__close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="9.2 12.3 12.5 12.5">
+            <path d="m21.4 14.4-4.1 4.1 4 4.1c.6.5.6 1.3 0 1.8-.4.5-1.2.5-1.7 0l-4.1-4.1-4.1 4.1c-.5.5-1.3.5-1.8 0s-.5-1.3 0-1.8l4.1-4.1-4.1-4.1c-.5-.5-.5-1.3 0-1.8s1.3-.5 1.8 0l4.1 4.1 4.1-4c.5-.6 1.3-.6 1.8 0 .5.4.5 1.2 0 1.7Z"/>
           </svg>
         </button>
-      </aside>
+      </div>
     {% endif %}
     <header class="header">
       <div class="wrapper">
-        {% if theme.logo != blank %}
-          <a class="store-link" href="/">
-            <img alt="{{ store.name | escape }} Home" class="store-logo" src="{{ theme.images.logo.url | constrain: 1508, 1508 }}">
-          </a>
-        {% else %}
-          <a class="store-link" href="/" title="{{ store.name | escape }} Home">{{ store.name }}</a>
-        {% endif %}
+        <a href="/" title="{{ store.name | escape }}" class="header-store-link header-store-link--{% if theme.header_logo != blank %}logo{% else %}text{% endif %}">
+          {% if theme.logo != blank %}
+            {% assign logo_image_height_1x = theme.logo_image_height %}
+            {% assign logo_image_height_2x = logo_image_height_1x | times: 2 %}
+            <img
+              class="store-logo"
+              srcset="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}, {{ theme.images.logo.url | constrain: '', logo_image_height_2x }} 2x"
+              src="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}"
+              alt="{{ store.name }} Home"
+            >
+          {% else %}
+            {{ store.name }}
+          {% endif %}
+        </a>
         <nav class="header-nav-container">
           <ul class="nav" role="menubar" aria-hidden="false">
-            <li class="nav-menu-item" role="menuitem" aria-haspopup="{% if categories.active == blank %}false{% else%}true{% endif %}">
+            <li class="nav-menu-item" role="menuitem" aria-haspopup="{% if categories.active == blank %}false{% else %}true{% endif %}">
               {% if categories.active != blank or artists.active != blank or theme.show_search != false %}
                 <a href="#" aria-label="Browse by category">Shop</a>
                 <ul aria-hidden="true" role="menu" class="horizontal-nav-links">
@@ -322,12 +330,45 @@
         <div class="footer-store-credit">{{ powered_by_big_cartel }}</div>
       </div>
     </footer>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      const themeOptions = {
+        showSoldOutOptions: {{ theme.show_sold_out_product_options }},
+        desktopProductPageImages: '{{ theme.desktop_product_page_images }}',
+        mobileProductPageImages: '{{ theme.mobile_product_page_images }}',
+        productImageZoom: {{ theme.product_image_zoom }},
+      }
+      const themeColors = {
+        backgroundColor: '{{ theme.background_color }}'
+      }
+    </script>
+    {% if theme.announcement_message_text != blank %}
+      <script>
+        let hashCode=function(s){return s.split("").reduce(function(a,b){a=((a<<5)-a)+b.charCodeAt(0);return a&a;},0);}
+        let announcementElement = document.querySelector(".announcement-message");
+        let announcementText = document.querySelector(".announcement-message__text").innerHTML;
+        let closeAnnouncementBtn = document.querySelector(".announcement-message__close-button");
+        let hashedAnnouncement = hashCode(announcementText);
+
+        function closeAnnouncement() {
+          let announcementElement = document.querySelector(".announcement-message");
+          announcementElement?.remove();
+          document.cookie = `announcementClosed=${hashedAnnouncement};path=/`;
+        }
+
+        if (announcementElement?.classList && closeAnnouncementBtn && hashedAnnouncement) {
+          let hasClosedAnnouncement = document.cookie.includes(`announcementClosed=${hashedAnnouncement}`);
+          if (!hasClosedAnnouncement) {
+            announcementElement.classList.add('visible');
+          }
+          closeAnnouncementBtn.addEventListener("click", closeAnnouncement);
+        }
+      </script>
+    {% endif %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="{{ 'api' | theme_js_url }}"></script>
     <script src="{{ theme | theme_js_url }}"></script>
     {% if page.full_url contains '/product/' %}
       <script>
-        var show_sold_out_product_options = '{{ theme.show_sold_out_product_options }}';
         Product.find('{{ product.permalink }}', processProduct)
       </script>
     {% endif %}
