--- a/source/product.html
+++ b/source/product.html
@@ -1,88 +1,175 @@
-<div class="product-page-content">
-  {% assign product_status = '' %}
-  {% case product.status %}
-  	{% when 'active' %}
-  		{% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
-  	{% when 'sold-out' %}
-  		{% assign product_status = 'Sold out' %}
-  	{% when 'coming-soon' %}
-  		{% assign product_status = 'Coming soon' %}
-  {% endcase %}
+{% assign product_status = '' %}
+{% case product.status %}
+	{% when 'active' %}
+		{% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
+	{% when 'sold-out' %}
+		{% assign product_status = 'Sold out' %}
+	{% when 'coming-soon' %}
+		{% assign product_status = 'Coming soon' %}
+{% endcase %}
 
-  <div class="primary-product-image-container">
-    <img alt="{{ product.name | escape }}" class="lazy primary-product-image" src="{{ product.image | product_image_url | constrain: 100 }}" data-src="{{ product.image | product_image_url | constrain: 768 }}" data-srcset="{{ product.image | product_image_url | constrain: 1536 }} 2x, {{ product.image | product_image_url | constrain: 768 }} 1x">
+<div class="product-container">
+  <div class="product-images desktop-{{ theme.desktop_product_page_images }} mobile-{{ theme.mobile_product_page_images }}" data-total-images="{{ product.images.size }}">
+    {% if product.images.size > 1 %}
+      <div class="splide product-carousel" role="group" aria-label="{{ product.name | escape }} images">
+        <div class="splide__track">
+          <div class="splide__list">
+            {% for image in product.images %}
+              {% assign image_width = image.width | times: 1.0 %}
+              {% assign image_height = image.height | times: 1.0 %}
+              {% assign aspect_ratio = image_width | divided_by: image_height %}
+              <div class="splide__slide">
+                {% if theme.product_image_zoom %}
+                  <a aria-label="Open image {{ forloop.index }} in image viewer" class="zoom-image-container gallery-link" href="{{ image | product_image_url | constrain: 2000 }}" data-pswp-width="{{ image_width | times: 2 }}" data-pswp-height="{{ image_height | times: 2 }}" >
+                {% else %}
+                  <div class="zoom-image-container">
+                {% endif %}
+                  <img
+                    alt="Image {{ forloop.index }} of {{ product.name | escape }}"
+                    class="product-image lazyload"
+                    {% if forloop.index == 1 %}fetchpriority="high"{% else %}loading="lazy"{% endif %}
+                    src="{{ image | product_image_url | constrain: 200 }}"
+                    data-srcset="
+                      {{ image | product_image_url | constrain: 400 }} 400w,
+                      {{ image | product_image_url | constrain: 700 }} 700w,
+                      {{ image | product_image_url | constrain: 1000 }} 1000w,
+                      {{ image | product_image_url | constrain: 1400 }} 1400w,
+                      {{ image | product_image_url | constrain: 2000 }} 2000w,
+                    "
+                    width="{{ image.height | times: aspect_ratio }}"
+                    height="{{ image.height }}"
+                    data-sizes="auto"
+                  >
+                {% if theme.product_image_zoom %}</a>{% else %}</div>{% endif %}
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+        {% if product.images.size > 5 %}
+          <div class="overlay-image-counter">
+            <span class="current-slide-number">1</span>&nbsp;/&nbsp;{{ product.images.size }}
+          </div>
+        {% endif %}
+      </div>
+      <div class="product-thumbnails-buttons-container">
+        <button aria-label="Slide left" aria-controls="carousel-thumbnail" class="thumb-scroller thumb-scroller--left" disabled data-direction="left">
+          <svg aria-hidden="true" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6"><path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/></svg>
+        </button>
+        <ul class="product-thumbnails--list{% if product.images.size == 5 %} mobile-overflow{% endif %}{% if product.images.size > 5 %} is-overflow{% endif %}" id="carousel-thumbnail">
+          {% for image in product.images %}
+            <li class="product-thumbnails--item">
+              <button class="product-thumbnails--change-slide" type="button" tabindex="0" aria-label="View image {{ forloop.index }} of {{ product.images.size }}">
+                <img
+                  alt=""
+                  class="lazyload"
+                  src="{{ image | product_image_url | constrain: 150 }}"
+                  data-srcset="
+                    {{ image | product_image_url | constrain: 250 }} 250w,
+                    {{ image | product_image_url | constrain: 300 }} 300w
+                  "
+                  data-sizes="auto"
+                >
+              </button>
+            </li>
+          {% endfor %}
+        </ul>
+        <button aria-label="Slide right" aria-controls="carousel-thumbnail" class="thumb-scroller thumb-scroller--right" data-direction="right">
+          <svg aria-hidden="true" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6"><path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/></svg>
+        </button>
+      </div>
+      <div class="mobile-buttons-indicator">
+        <button aria-label="View previous image" class="change-slide change-slide--left previous-slide">
+          <svg fill="currentColor" aria-hidden="true" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6"><path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/></svg>
+        </button>
+        <div><span class="current-slide-number">1</span> of {{ product.images.size }}</div>
+        <button aria-label="View next image" class="change-slide change-slide--right next-slide">
+          <svg fill="currentColor" aria-hidden="true" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6"><path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/></svg>
+        </button>
+      </div>
+    {% else %}
+      {% assign image_width = product.image.width | times: 1.0 %}
+      {% assign image_height = product.image.height | times: 1.0 %}
+      {% if theme.product_image_zoom %}
+        <a aria-label="Open image of {{ product.name | escape }} in image viewer" class="zoom-image-container gallery-link" href="{{ product.image | product_image_url | constrain: 2000 }}" data-pswp-width="{{ image_width | times: 2 }}" data-pswp-height="{{ image_height | times: 2 }}" >
+      {% else %}
+        <div class="zoom-image-container">
+      {% endif %}
+        <img
+          alt="{{ product.name | escape }}"
+          class="blur-up product-image lazyload"
+          fetchpriority="high"
+          src="{{ product.image | product_image_url | constrain: 200 }}"
+          data-srcset="
+            {{ product.image | product_image_url | constrain: 400 }} 400w,
+            {{ product.image | product_image_url | constrain: 700 }} 700w,
+            {{ product.image | product_image_url | constrain: 1000 }} 1000w,
+            {{ product.image | product_image_url | constrain: 1400 }} 1400w,
+            {{ product.image | product_image_url | constrain: 2000 }} 2000w,
+          "
+          data-sizes="auto"
+        >
+      {% if theme.product_image_zoom %}</a>{% else %}</div>{% endif %}
+    {% endif %}
   </div>
 
-  <div class="product-page-details{% if product.status != 'active' %} inactive{% endif %}">
-    <div class="product-page-titles">
-      <h1 class="page-title product-name">{{ product.name }}</h1>
-      <div class="product-page-price">
+  <section class="product-detail">
+    <div class="product-detail__header">
+      {% capture product_pricing %}
         {% if product.variable_pricing %}
           {{ product.min_price | money: theme.money_format }} - {{ product.max_price | money: theme.money_format }}
         {% else %}
           {{ product.default_price | money: theme.money_format }}
         {% endif %}
-        {% if product_status != blank %}
-          &mdash; <span class="product-status">{{ product_status }}</span>
-        {% endif %}
-      </div>
+      {% endcapture %}
+      <h1 class="page-title page-title--left product-detail__title">{{ product.name }}</h1>
+      <div class="product-detail__pricing">{{ product_pricing }} {% if product_status != blank %}<div class="product-detail__status">{{ product_status }}</div>{% endif %}</div>
     </div>
-
     {% if product.status == 'active' %}
       <form method="post" class="product-form {% if theme.show_sold_out_product_options %}show-sold-out{% else %}hide-sold-out{% endif %}" action="/cart" accept-charset="utf8">
         <input type="hidden" name="utf8" value='✓'>
         {% if product.has_default_option %}
           {{ product.option | hidden_option_input }}
         {% else %}
-          {% if product.has_option_groups %}
-            <div class="product_option_groups">
-              <input id="option" name="cart[add][id]" type="hidden" value="0">
-              {% for option_group in product.option_groups %}
-                <div class="select">
-                  <select data-unavailable-text="(Unavailable)" data-sold-text="(Sold out)" data-group-id="{{ option_group.id }}" data-group-name="{{ option_group.name | escape }}" class="product_option_group" name="option_group[{{ option_group.id }}]" title="Select {{ option_group.name | escape }}" required>
-                    <option value="" disabled="disabled" selected>Select {{ option_group.name }}</option>
-                    {% for value in option_group.values %}
-                      <option value="{{ value.id }}" data-name="{{ value.name | escape }}">{{ value.name }}</option>
-                    {% endfor %}
-                  </select>
-                  <svg aria-hidden="true" class="down-arrow" width="13" height="15" viewBox="0 0 13 15" xmlns="http://www.w3.org/2000/svg"><path d="M13 8.35885695l-1.05568445-1.0024981-4.69025523 4.39122407V-4e-7H5.74593968v11.74758332L1.0556845 7.35635885 0 8.35885695 6.5 14.444444z" fill-rule="nonzero"/></svg>
-                </div>
-              {% endfor %}
-            </div>
-          {% else %}
-            <div class="select">
-              <select class="product_option_select" id="option" name="cart[add][id]" title="Select variant" required>
-                <option value="" disabled="disabled" selected>Select variant</option>
-                {% for option in product.options %}
-                  <option value="{{ option.id }}" data-price="{{ option.price }}"{% if option.sold_out %} disabled="disabled" disabled-type="sold-out"{% endif %}>{{ option.name }} {% if option.sold_out %} (Sold out){% endif %}</option>
+          <div class="product-selects">
+            {% if product.has_option_groups %}
+              <div class="product-option-groups">
+                <input id="option" name="cart[add][id]" type="hidden" value="0">
+                {% for option_group in product.option_groups %}
+                  <div class="select">
+                    <select data-unavailable-text="(Unavailable)" data-sold-text="(Sold out)" data-group-id="{{ option_group.id }}" data-group-name="{{ option_group.name | escape }}" class="product_option_group" name="option_group[{{ option_group.id }}]" aria-label="Select {{ option_group.name | escape }}" required>
+                      <option value="" disabled="disabled" selected>Select {{ option_group.name }}</option>
+                      {% for value in option_group.values %}
+                        <option value="{{ value.id }}" data-name="{{ value.name | escape }}">{{ value.name }}</option>
+                      {% endfor %}
+                    </select>
+                    <svg aria-hidden="true" class="down-arrow" width="13" height="15" viewBox="0 0 13 15" xmlns="http://www.w3.org/2000/svg"><path d="M13 8.35885695l-1.05568445-1.0024981-4.69025523 4.39122407V-4e-7H5.74593968v11.74758332L1.0556845 7.35635885 0 8.35885695 6.5 14.444444z" fill-rule="nonzero"/></svg>
+                  </div>
                 {% endfor %}
-              </select>
-              <svg aria-hidden="true" class="down-arrow" width="13" height="15" viewBox="0 0 13 15" xmlns="http://www.w3.org/2000/svg"><path d="M13 8.35885695l-1.05568445-1.0024981-4.69025523 4.39122407V-4e-7H5.74593968v11.74758332L1.0556845 7.35635885 0 8.35885695 6.5 14.444444z" fill-rule="nonzero"/></svg>
-            </div>
-          {% endif %}
+              </div>
+            {% else %}
+              <div class="select">
+                <select class="product-option-select" id="option" name="cart[add][id]" aria-label="Select variant" required>
+                  <option value="" disabled="disabled" selected>Select variant</option>
+                  {% for option in product.options %}
+                    <option value="{{ option.id }}" data-price="{{ option.price }}"{% if option.sold_out %} disabled="disabled" disabled-type="sold-out"{% endif %}>{{ option.name }} {% if option.sold_out %} (Sold out){% endif %}</option>
+                  {% endfor %}
+                </select>
+                <svg aria-hidden="true" class="down-arrow" width="13" height="15" viewBox="0 0 13 15" xmlns="http://www.w3.org/2000/svg"><path d="M13 8.35885695l-1.05568445-1.0024981-4.69025523 4.39122407V-4e-7H5.74593968v11.74758332L1.0556845 7.35635885 0 8.35885695 6.5 14.444444z" fill-rule="nonzero"/></svg>
+              </div>
+            {% endif %}
+          </div>
         {% endif %}
-        <button class="button add-to-cart-button" name="submit" type="submit" data-adding-text="Adding..." data-added-text="Added!" data-add-title="Add to Cart" data-sold-title="Sold out">Add to Cart</button>
+        <button class="button add-to-cart-button" name="submit" type="submit" data-add-title="Add to cart" data-sold-title="Sold out">Add to cart</button>
         {{ store | instant_checkout_button: 'dark', '44px' }}
         {% if product.has_option_groups %}
           <div class="reset-selection-button-container">
-            <button class="button minimal-button reset-selection-button" title="Reset selection" type="reset">Reset selection</button>
+            <button class="button button--minimal reset-selection-button" type="reset">Reset selection</button>
           </div>
         {% endif %}
       </form>
     {% endif %}
-
-  	<div class="product-description">
-  		{% if product.description != blank %}
-  			{{ product.description | paragraphs }}
-  		{% endif %}
-  	</div>
-  </div>
-
-  {% if product.images.size > 1 %}
-    <div class="secondary-product-image-container">
-      {% for image in product.images offset: 1 %}
-        <img alt="{{ product.name | escape }} Image {{ forloop.index | plus: 1 }}" class="lazy secondary-product-image" src="{{ image | product_image_url | constrain: 70 }}" data-src="{{ image | product_image_url | constrain: 768 }}" data-srcset="{{ image | product_image_url | constrain: 1536 }} 2x, {{ image | product_image_url | constrain: 768 }} 1x">
-      {% endfor %}
-    </div>
-  {% endif %}
+    {% if product.description != blank %}
+      <div class="product-detail__description">{{ product.description | paragraphs }}</div>
+    {% endif %}
+  </section>
 </div>
