--- a/source/cart.html
+++ b/source/cart.html
@@ -39,7 +39,7 @@
           <span class="cart-subtotal-amount">{{ cart.total | money: theme.money_format }}</span>
         </div>
         <button type="submit" name="checkout" class="button checkout-btn">Checkout</button>
-        <a class="button minimal-button continue-shopping" href="/products">Continue Shopping</a>
+        <a class="button button--minimal continue-shopping" href="/products">Continue Shopping</a>
       </div>
     </form>
   {% endif %}
