feat: add product status colors for primary vs secondary status
* feat: Add settings for primary vs secondary product status to emphasize on sale products vs out of stock
* fix: product status display correct label in related products

fix: add product status color settings

--- a/source/home.html
+++ b/source/home.html
@@ -92,6 +92,7 @@
                   {% when 'coming-soon' %}
                     {% assign product_status = 'Coming soon' %}
                 {% endcase %}
+                {% capture status_class %}{% if product.status == 'active' and product.on_sale %}status-primary{% else %}status-secondary{% endif %}{% endcapture %}
                 <div class="product-list-thumb {{ product.css_class }}">
                   <a
                     class="product-list-link{% if product.images[1] != blank and theme.secondary_image_on_hover == true %} product-list-link--show-secondary{% endif %}"
@@ -132,7 +133,7 @@
                           data-sizes="auto"
                         >
                       {% endif %}
-                      {% if product_status != blank %}<div class="product-list-thumb-status">{{ product_status }}</div>{% endif %}
+                      {% if product_status != blank %}<div class="product-list-thumb-status {{ status_class }}">{{ product_status }}</div>{% endif %}
                     </div>
                     <div class="product-list-thumb-info">
                       <div class="product-list-thumb-name">{{ product.name }}</div>
