--- a/source/layout.html
+++ b/source/layout.html
@@ -219,7 +219,16 @@
                   <div class="related-product-list product-list">
                     {% for product_permalink in final_permalinks_array %}
                       {% assign matched_product = products[product_permalink] %}
-                      
+                      {% assign matched_product_status = '' %}
+                      {% case matched_product.status %}
+                        {% when 'active' %}
+                          {% if matched_product.on_sale %}{% assign matched_product_status = 'On sale' %}{% endif %}
+                        {% when 'sold-out' %}
+                          {% assign matched_product_status = 'Sold out' %}
+                        {% when 'coming-soon' %}
+                          {% assign matched_product_status = 'Coming soon' %}
+                      {% endcase %}
+                      {% capture matched_product_status_class %}{% if matched_product.status == 'active' and matched_product.on_sale %}status-primary{% else %}status-secondary{% endif %}{% endcapture %}
                       {% if matched_product != blank %}
                         <div class="product-list-thumb {{ matched_product.css_class }}">
                           <a class="product-list-link{% if matched_product.images[1] != blank and theme.secondary_image_on_hover == true %} product-list-link--show-secondary{% endif %}" href="{{ matched_product.url }}" title="View {{ matched_product.name | escape }}">
@@ -256,7 +265,7 @@
                                   data-sizes="auto"
                                 >
                               {% endif %}
-                              {% if matched_product.status != blank %}<div class="product-list-thumb-status">{{ matched_product.status }}</div>{% endif %}
+                              {% if matched_product_status != blank %}<div class="product-list-thumb-status {{ matched_product_status_class }}">{{ matched_product_status }}</div>{% endif %}
                             </div>
                             <div class="product-list-thumb-info">
                               <div class="product-list-thumb-name">{{ matched_product.name }}</div>
